# AP_Development_2025

./: README.md  docker-compose.yaml  ЛР 3.docx  ЛР 4.docx  ЛР2 — Карабанов П.А.docx  Разработка Приложений ЛР_1.docx
Lab2_RP/: Main.py  alembic.ini  example.db  test_debug.py
Lab2_RP/migrations/: env.py
Lab2_RP/migrations/versions/: 756ffbb43379_add_description_to_users_and_orders_.py  d36b453084bf_.py
Lab3_RP/: alembic.ini
Lab3_RP/app/: main.py
Lab3_RP/app/controllers/: user_controller.py
Lab3_RP/app/models/: models.py
Lab4_RP/: README.md  pyproject.toml  test.db
Lab4_RP/app/: main.py
Lab4_RP/app/controllers/: user_controller.py
Lab4_RP/app/models/: models.py
Lab4_RP/app/repositories/: user_repository.py
Lab4_RP/app/schemas/: schemas.py
Lab4_RP/app/services/: user_service.py
Lab4_RP/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1374716a89f3e08d___init___py.html  z_1374716a89f3e08d_models_py.html  z_4c37ce8615b5aa70___init___py.html  z_4c37ce8615b5aa70_user_service_py.html  z_5f5a17c013354698_main_py.html  z_6f50d20dc3c7ccdf___init___py.html  z_6f50d20dc3c7ccdf_user_repository_py.html  z_b282c0f142a3ac40___init___py.html  z_b282c0f142a3ac40_user_controller_py.html  z_b4c115836e286174___init___py.html  z_b4c115836e286174_schemas_py.html
Lab4_RP/lab4_testing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Lab4_RP/tests/: conftest.py
Lab4_RP/tests/test_repositories/: test_user_repository.py
Lab4_RP/tests/test_routes/: test_user_routes.py
Lab4_RP/tests/test_services/: test_user_service.py
(+3 files in other folders)
